fix: fixed url pictures

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p class="special">Student in RS School</p>
                 </div>
                 <div class="myphoto">
-                    <img src="/img/photo.jpg" alt="">
+                    <img src="img/photo.jpg" alt="">
                 </div>
                 <ul class="social">
                     <li><a href="skype:lehatrue"><i class="fa fa-skype"></i></a></li>
@@ -56,10 +56,10 @@
             <div class="container">
                 <h1 class="skills-title">Skills</h1>
                 <div class="skills-img">
-                    <img class="html" src="/img/html5.png" alt="">
-                    <img class="css" src="/img/css3.png" alt="">
-                    <img class="js" src="/img/js.png" alt="">
-                    <img class="git" src="/img/git.png" alt="">
+                    <img class="html" src="img/html5.png" alt="">
+                    <img class="css" src="img/css3.png" alt="">
+                    <img class="js" src="img/js.png" alt="">
+                    <img class="git" src="img/git.png" alt="">
                 </div>
             </div>
         </section>
